Fixed a major bug in my responsive nav. It wasnt taking the full width on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -99,7 +99,6 @@ body {
                     left: 0;
                     width: 100%;
                     bottom: 0;
-                    border: 2px solid red;
                     background-color: color(white);
                     justify-content: center;
                     text-align: center;
